[package]
name = "screw-css"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
lightningcss = "1.0.0-alpha.38"
thiserror = "1.0.38"
derive_more = "0.99.17"
itertools = { version = "0.10.5", features=["use_alloc", "use_std"] }
